-fix z-index

--- a/resources/js/components/widget-popup/widget-popup.scss
+++ b/resources/js/components/widget-popup/widget-popup.scss
@@ -1,12 +1,6 @@
 @import '@/app';
 
 .swift-widget-popup {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-
   @include media('m-only') {
     width: 100%;
   }
